--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "next/core-web-vitals"
+  "root": true,
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "@next/next/no-css-tags": "off",
+    "@next/next/no-page-custom-font": "off"
+  }
 }
